<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="366dp"
        android:layout_height="158dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#787575"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3D1D1"
            android:forceHasOverlappingRendering="true"
            android:foregroundGravity="center">

            <ImageView
                android:id="@+id/genreImageView"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="203dp"
                android:layout_height="31dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/movieTitle"
                app:layout_constraintStart_toEndOf="@+id/genreImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/movieGenre"
                app:layout_constraintStart_toEndOf="@+id/genreImageView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/directorTextView"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/movieDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/visitesTextView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/movieViews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/directorTextView" />

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/movieCountry"
                app:layout_constraintStart_toEndOf="@+id/genreImageView"
                app:layout_constraintTop_toBottomOf="@+id/genreTextView" />

            <TextView
                android:id="@+id/profitTextView"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/movieProfit"
                app:layout_constraintStart_toEndOf="@+id/genreImageView"
                app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="88dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visitesTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>